# Purifyt

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  postman_collection.json  purifyt.spec  pytest.ini  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: deploy.yml  release.yml
app/: main.py  standalone.py
app/api/: router.py
app/api/v1/: auth.py  auto_delete.py  channel_explorer.py  datasets.py  explorer.py  kaggle.py  labeling.py  settings.py  users.py  youtube.py
app/config/: logging_config.py  settings.py
app/core/: config.py  logging.py  schemas.py
app/core/services/: auth_service.py  auto_delete_service.py  browser_driver.py  channel_explorer_service.py  cookie_manager.py  explorer_service.py  kaggle_service.py  model_service.py  youtube_service.py  (+1 more)
app/data/: unicode.json
app/db/: connection.py  models.py
app/utils/: __init__.py  response_formatter.py  text_cleaner.py
docs/: api.md  architecture.md  dataset.md  postman_collection.json  setup.md  use_case_specification.md
model/: .gitignore
nginx/: nginx.conf
scripts/: reprocess_clean_comments.py
tests/: test_api.py  test_auth_flow.py  test_text_cleaner.py  test_use_cases.py
website/: Makefile  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml
website/i18n/: vue-i18n.config.ts
website/scripts/: build-server.mjs
website/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
website/src-tauri/icons/: icon.icns
website/src-tauri/src/: lib.rs  main.rs
(+65 files in other folders)
